corrected script address

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         dayjs.extend(window.dayjs_plugin_utc)
         dayjs.extend(window.dayjs_plugin_advancedFormat)
       </script>
-      
-      <script src="script.js"></script>
+
+      <script src="./assets/Javascript/script.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
