--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
     <title>Todays Scheduler</title>
   </head>
 
@@ -40,7 +40,7 @@
         -->
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block">
+      <div id="9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -68,21 +68,21 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="1" class="row time-block">
+      <div id="13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="2" class="row time-block">
+      <div id="14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">2pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="3" class="row time-block">
+      <div id="15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">3pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -91,7 +91,7 @@
       </div>
 
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="4pm" class="row time-block ">
+      <div id="16pm" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -100,7 +100,7 @@
       </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="5pm" class="row time-block ">
+      <div id="17pm" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -122,6 +122,6 @@
       </script>
 
       <script src="./assets/Javascript/script.js"></script>
-    <script src="script.js"></script>
+
   </body>
 </html>
