--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="16pm" class="row time-block ">
+      <div id="16" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -100,7 +100,7 @@
       </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="17pm" class="row time-block ">
+      <div id="17" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
